--- a/src/FurniturePlanner.mxml
+++ b/src/FurniturePlanner.mxml
@@ -1,8 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600">
+			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600" 
+			   xmlns:components="components.*"
+			   currentState='LoginState'>
+
+	<fx:Script>
+		<![CDATA[
+	
+			import mx.rpc.events.FaultEvent;
+			import mx.rpc.events.ResultEvent;
+			import mx.controls.Alert;
+			protected function loginpanel_clickHandler(event:MouseEvent):void
+			{
+				if (event.target.id == 'loginButton'){
+					currentState='MainState';
+				}
+				else{
+					currentState = 'RegState';
+				}
+			}
+
+			protected function authorizationService_resultHandler(event:ResultEvent):void
+			{
+				Alert.show(event.result.toString());
+			}
+
+
+			protected function regPanel_clickHandler(event:MouseEvent):void
+			{
+				if (event.target.id == 'registration'){
+					authorizationService.send();
+				}
+				else{
+					
+				}
+			}
+
+
+			protected function authorizationService_faultHandler(event:FaultEvent):void
+			{
+				Alert.show(event.fault.faultString, "Информация об ошибке");
+				
+			}
+
+		]]>
+	</fx:Script>
+
+
+	<s:states>
+		<s:State name="LoginState"/>
+		<s:State name="MainState"/>
+		<s:State name="RegState"/>
+	</s:states>
+	<s:transitions>
+		<s:Transition fromState="LoginState" toState="RegState">
+			<s:Sequence targets="{[loginPanel, regPanel]}">
+				<s:Fade duration="2000"/>
+			</s:Sequence>
+		</s:Transition> 
+	</s:transitions>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
+		<s:HTTPService id = "authorizationService"
+					   url="http://localhost:3001/users/create_xml"
+					   contentType="application/xml"
+					   method="POST" 
+					   resultFormat="e4x"
+					   result="authorizationService_resultHandler(event)"
+					   fault="authorizationService_faultHandler(event)">
+			<s:request xmlns="">
+				<user>
+					<login>{regPanel.userLogin.text}</login>
+					<name>{regPanel.userName.text}</name>
+					<email>{regPanel.userEmail.text}</email>
+				</user>
+			</s:request>
+		</s:HTTPService>
 	</fx:Declarations>
+	<s:layout>
+		<s:VerticalLayout verticalAlign="middle" horizontalAlign="center"/>
+	</s:layout>
+		
+	<components:LoginPanel 
+		id="loginPanel"
+		title = "Вход в систему"  
+		includeIn="LoginState,RegState"
+		click="loginpanel_clickHandler(event)"
+		/>
+	<s:Panel 
+		title="Визуализация мебелирование помещения" 
+		includeIn="MainState" 
+		width="100%" height="100%">
+	</s:Panel>
+	<components:RegistrationPanel
+		id="regPanel"
+		includeIn = "RegState"
+		title="Регистрация нового пользователя" 
+		click="regPanel_clickHandler(event)"/>
 </s:Application>
