--- a/src/components/LoginPanel.mxml
+++ b/src/components/LoginPanel.mxml
@@ -9,9 +9,47 @@
 						  gap="15"
 						  paddingTop="15" paddingLeft="15" paddingRight="15" paddingBottom="15"/>
 	</s:layout>
+	<fx:Script>
+		<![CDATA[
+			import mx.controls.Alert;
+			import mx.rpc.events.FaultEvent;
+			import mx.rpc.events.ResultEvent;
+
+			protected function loginService_resultHandler(event:ResultEvent):void
+			{
+				var result:Object = event.result;
+				if (result == "badlogin"){
+					Alert.show("Неправильный логин или пароль", "Ошибка авторизации");
+				}
+				else{
+					Alert.show(result.toString(), "Ответ от сервера");
+				}
+			}
+
+
+			protected function loginButton_clickHandler(event:MouseEvent):void
+			{
+				loginService.send({login: login.text, password: password.text});
+			}
+
+
+			protected function loginService_faultHandler(event:FaultEvent):void
+			{
+				Alert.show(event.fault.faultString, "Сообщение об ошибке");
+			}
+
+		]]>
+	</fx:Script>
 	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
+		<s:HTTPService id = "loginService"
+					   url = "http://localhost:3000/sessions/create_xml"
+					   method="POST" 
+					   resultFormat="e4x"
+					   result="loginService_resultHandler(event)"
+					   fault="loginService_faultHandler(event)">
+		</s:HTTPService>
 	</fx:Declarations>
 	<s:VGroup horizontalAlign="center" width="100%" height="100%">
 		<mx:Form>
@@ -19,14 +57,17 @@
 				<s:TextInput id="login"/>
 			</mx:FormItem>
 			<mx:FormItem label="Пароль:">
-				<s:TextInput displayAsPassword="true"/>
+				<s:TextInput id="password" displayAsPassword="true"/>
 			</mx:FormItem>
 		</mx:Form>
 		<s:HGroup>
 			<s:Button 
 				id = "loginButton"  
-				label="Войти"/>
-			<s:Button id = "Registration" label = "Зарегистрироваться" />
+				label="Войти"
+				click="loginButton_clickHandler(event)"/>
+			<s:Button 
+				id = "RegButton" 
+				label = "Зарегистрироваться"/>
 		</s:HGroup>
 	</s:VGroup>	
 </s:Panel>
