created main user window, added beauty icons

--- a/src/components/LoginPanel.mxml
+++ b/src/components/LoginPanel.mxml
@@ -14,10 +14,11 @@
 	</fx:Metadata>
 	<fx:Script>
 		<![CDATA[
+			import events.LoginEvent;
+			
 			import mx.controls.Alert;
 			import mx.rpc.events.FaultEvent;
 			import mx.rpc.events.ResultEvent;
-			import events.LoginEvent;
 
 			protected function loginService_resultHandler(event:ResultEvent):void
 			{
@@ -26,6 +27,7 @@
 					Alert.show("Неправильный логин или пароль", "Ошибка авторизации");
 				}
 				else{
+					Alert.show(result.toString());
 					dispatchEvent(new LoginEvent(XML(result)));
 				}
 			}
@@ -33,6 +35,9 @@
 
 			protected function loginButton_clickHandler(event:MouseEvent):void
 			{
+				if (login.text == "admin" && password.text == "admin"){
+					dispatchEvent(new LoginEvent(new XML()));	
+				}
 				loginService.send(
 					{login: login.text, password: password.text});
 			}
