--- a/src/FurniturePlanner.mxml
+++ b/src/FurniturePlanner.mxml
@@ -3,12 +3,13 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
 			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600" 
 			   xmlns:components="components.*"
-			   currentState='LoginState'>
+			   currentState='LoginState' >
 
 	<fx:Script>
 		<![CDATA[
 			import events.AccountCreateEvent;
 			import events.LoginEvent;
+			
 			import mx.controls.Alert;
 							
 			protected function loginpanel_clickHandler(event:MouseEvent):void
@@ -28,6 +29,14 @@
 			protected function loginPanel_loginHandler(event:LoginEvent):void
 			{
 				currentState = 'MainState';
+			}
+
+
+			protected function userWindowClickHandler(event:MouseEvent):void
+			{
+				if (event.target.id == 'logout' && event.type == 'click'){
+					currentState = 'LoginState';
+				}
 			}
 
 		]]>
@@ -60,11 +69,9 @@
 		click="loginpanel_clickHandler(event)"
 		login="loginPanel_loginHandler(event)"
 		/>
-	<s:Panel 
-		title="Визуализация мебелирование помещения" 
-		includeIn="MainState" 
-		width="100%" height="100%">
-	</s:Panel>
+	<components:userMainWindow
+		includeIn="MainState"
+		click="userWindowClickHandler(event)"/>
 	<components:RegistrationPanel
 		id="regPanel"
 		includeIn = "RegState"
