--- a/src/FurniturePlanner.mxml
+++ b/src/FurniturePlanner.mxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600" 
+			   xmlns:mx="library://ns.adobe.com/flex/mx"
+			   width="100%" height="100%"
 			   xmlns:components="components.*"
 			   currentState='LoginState' >
-
 	<fx:Script>
 		<![CDATA[
 			import events.AccountCreateEvent;
@@ -58,23 +58,20 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:layout>
-		<s:VerticalLayout verticalAlign="middle" horizontalAlign="center"/>
-	</s:layout>
-		
-	<components:LoginPanel 
-		id="loginPanel"
-		title = "Вход в систему"  
-		includeIn="LoginState,RegState"
-		click="loginpanel_clickHandler(event)"
-		login="loginPanel_loginHandler(event)"
-		/>
+	<s:VGroup verticalCenter="0" horizontalCenter="0">
+		<components:LoginPanel 
+			id="loginPanel"
+			title = "Вход в систему"  
+			includeIn="LoginState,RegState"
+			click="loginpanel_clickHandler(event)"
+			login="loginPanel_loginHandler(event)"/>
+		<components:RegistrationPanel
+			id="regPanel"
+			includeIn = "RegState"
+			title="Регистрация нового пользователя" 
+			accountCreate="accountCreateHandler(event)"/>
+	</s:VGroup>
 	<components:userMainWindow
 		includeIn="MainState"
 		click="userWindowClickHandler(event)"/>
-	<components:RegistrationPanel
-		id="regPanel"
-		includeIn = "RegState"
-		title="Регистрация нового пользователя" 
-		accountCreate="accountCreateHandler(event)"/>
 </s:Application>
