--- a/src/components/userMainWindow.mxml
+++ b/src/components/userMainWindow.mxml
@@ -2,9 +2,8 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 width="100%" height="100%" 
 		 xmlns:components="components.*"
-		 skinClass="skins.customPanelSkin" >
+		 width="100%" height="100%" >
 	<s:controlBarContent>
 		<s:HGroup id="helpBar" 
 				  width="50%"
@@ -33,7 +32,7 @@
 				<s:BitmapImage source="@Embed('icons/status_online.png')" />
 				<mx:LinkButton 
 					label="Учетная запись" 
-					textDecoration="underline"/>
+					textDecoration="underline" />
 			</s:HGroup>
 			<s:HGroup
 				verticalAlign="middle"
@@ -45,21 +44,28 @@
 							    />
 			</s:HGroup>
 		</s:HGroup>
-	</s:controlBarContent>
-	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
-	<s:HGroup width="100%" height="100%">
-		<components:ToolWindow width="100%" height="100%" />
-		<s:VGroup horizontalAlign="right" width="200" gap="20">
-			<mx:TabNavigator width="200" height="150">
-				<s:NavigatorContent label="Гостиные" />
-				<s:NavigatorContent label="Кухни" />
-				<s:NavigatorContent label="Мягкая мебель" />
-			</mx:TabNavigator>
-			<components:userProjects title="Мои проекты"
-									 width="200"/>
-		</s:VGroup>
-	</s:HGroup>
+	</s:controlBarContent>	
+	<s:layout>
+		<s:BasicLayout />
+	</s:layout>
+	<s:Scroller width="100%" height="100%">
+		<s:Group width="100%" height="100%">
+			<s:HGroup 
+				width="100%" height="100%">
+				<components:ToolWindow 
+					width="70%" height="100%">
+				</components:ToolWindow>
+				<s:VGroup 
+					minWidth="300" maxWidth="350"
+					width="30%" height="100%"
+					gap="20">
+					<components:catalog
+						height="100%" width="100%"/>
+					<components:userProjects 
+						title="Мои проекты" 
+						width="100%" height="500"/>
+				</s:VGroup>	
+			</s:HGroup>
+		</s:Group>
+	</s:Scroller>
 </s:Panel>
