small fix with icons and buttons

--- a/src/FurniturePlanner.mxml
+++ b/src/FurniturePlanner.mxml
@@ -36,6 +36,8 @@
 			{
 				if (event.target.id == 'logout' && event.type == 'click'){
 					currentState = 'LoginState';
+					loginPanel.login.text = '';
+					loginPanel.password.text = '';
 				}
 			}
 
