--- a/src/components/LoginPanel.mxml
+++ b/src/components/LoginPanel.mxml
@@ -62,7 +62,7 @@
 		</s:HTTPService>
 	</fx:Declarations>
 	<s:VGroup horizontalAlign="center" width="100%" height="100%">
-		<mx:Form>
+		<mx:Form id="loginForm" >
 			<mx:FormItem label="Имя пользователя:">
 				<s:TextInput id="login"/>
 			</mx:FormItem>
