--- a/src/components/userMainWindow.mxml
+++ b/src/components/userMainWindow.mxml
@@ -4,22 +4,49 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:components="components.*"
 		 width="100%" height="100%" >
+	<fx:Script>
+		<![CDATA[
+			[Embed(source="icons/report.png")] 
+			[Bindable]
+			public var furnitureListIcon:Class; 
+			
+			[Embed(source="icons/help.png")] 
+			[Bindable]
+			public var helpButtonIcon:Class; 
+			
+			[Embed(source="icons/cart.png")] 
+			[Bindable]
+			public var buyButtonIcon:Class; 
+			
+			[Embed(source="icons/status_online.png")] 
+			[Bindable]
+			public var accountIcon:Class;
+			
+			[Embed(source="icons/door_out.png")] 
+			[Bindable]
+			public var logoutIcon:Class;
+			
+		]]>
+	</fx:Script>
 	<s:controlBarContent>
 		<s:HGroup id="helpBar" 
-				  width="50%"
-				  gap="-2">
+				  width="50%">
 			<s:HGroup
-				gap="-2"
 				verticalAlign="middle">
-				<s:BitmapImage source="@Embed('icons/help.png')" />
 				<mx:LinkButton label="Помощь дизайнера" 
 							   textDecoration="underline"
+							   icon="{helpButtonIcon}"
 							   />
 			</s:HGroup>
-			<s:HGroup verticalAlign="middle" gap="0">
-				<s:BitmapImage source="@Embed('icons/cart.png')" />
+			<s:HGroup verticalAlign="middle">
 				<mx:LinkButton label="Покупка мебели" 
-							   textDecoration="underline" />	
+							   textDecoration="underline"
+							   icon="{buyButtonIcon}"/>	
+			</s:HGroup>
+			<s:HGroup verticalAlign="middle">
+				<mx:LinkButton label="Список использованной в проекте мебели" 
+							   textDecoration="underline"
+							   icon="{furnitureListIcon}"/>	
 			</s:HGroup>
 		</s:HGroup>
 		<s:HGroup id="sessionControl" 
@@ -27,21 +54,18 @@
 				  horizontalAlign="right"
 				  verticalAlign="middle">
 			<s:HGroup
-				 verticalAlign="middle"
-				  gap="-2">
-				<s:BitmapImage source="@Embed('icons/status_online.png')" />
+				 verticalAlign="middle">
 				<mx:LinkButton 
 					label="Учетная запись" 
-					textDecoration="underline" />
+					textDecoration="underline"
+					icon="{accountIcon}"/>
 			</s:HGroup>
 			<s:HGroup
-				verticalAlign="middle"
-				gap="-2">
-				<s:BitmapImage source="@Embed('icons/door_out.png')" />
+				verticalAlign="middle">
 				<mx:LinkButton label="Выход" 
 							   id="logout" 
 							   textDecoration="underline"
-							    />
+							   icon="{logoutIcon}"/>
 			</s:HGroup>
 		</s:HGroup>
 	</s:controlBarContent>	
