--- a/src/components/RegistrationPanel.mxml
+++ b/src/components/RegistrationPanel.mxml
@@ -9,10 +9,11 @@
 	</fx:Metadata>
 	<fx:Script>
 		<![CDATA[
+			import events.AccountCreateEvent;
+			
 			import mx.controls.Alert;
 			import mx.rpc.events.FaultEvent;
 			import mx.rpc.events.ResultEvent;
-			import events.AccountCreateEvent;
 			
 			[Bindable]
 			public var serverAddress:String = new String("http://localhost:3000/users/create_xml");
@@ -26,7 +27,17 @@
 				}
 				else{
 					dispatchEvent(new AccountCreateEvent(XML(result)));
+					clearForm();
 				}
+			}
+			
+			private function clearForm():void{
+				userLogin.text = '';
+				userEmail.text = '';
+				userName.text = '';
+				userSurName.text = '';
+				userPassword.text = '';
+				userPasswordConfirmation.text = '';
 			}
 			
 						
@@ -56,7 +67,10 @@
 				<user>
 					<login>{userLogin.text}</login>
 					<email>{userEmail.text}</email>
-					<!--<name>{userName.text}</name>-->
+					<name>{userName.text}</name>
+					<last_name>{userSurName.text}</last_name>
+					<telephone_number>{telephoneNumber.text}</telephone_number>
+					<system_role>0</system_role>
 					<password>{userPassword.text}</password>
 					<password_confirmation>{userPasswordConfirmation.text}</password_confirmation>
 				</user>
@@ -69,8 +83,8 @@
 						  paddingTop="15" paddingLeft="15" paddingRight="15" paddingBottom="15"/>
 	</s:layout>
 	<s:VGroup horizontalAlign="center" width="100%" height="100%">
-		<mx:Form>
-			<mx:FormItem 
+		<mx:Form id="regForm">
+			<mx:FormItem id="regFormItem"
 				label="Логин:"
 				 required="true">
 				<s:TextInput id="userLogin"/> 
@@ -89,6 +103,9 @@
 				label="Фамилия:"
 				required="true">
 				<s:TextInput id="userSurName"/>
+			</mx:FormItem>
+			<mx:FormItem label="Номер телефона:">
+				<s:TextInput id="telephoneNumber" />
 			</mx:FormItem>
 			<mx:FormItem 
 				label="Пароль:"
