--- a/src/components/userProjects.mxml
+++ b/src/components/userProjects.mxml
@@ -1,8 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx">
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
+		 creationComplete="displayUserProjects()">
+	<fx:Script>
+		<![CDATA[
+			import mx.rpc.events.FaultEvent;
+			import mx.rpc.events.ResultEvent;
+			import mx.controls.Alert;
+			
+			public function displayUserProjects():void{
+				svcProjectsList.send();
+			}
+			
+			private function handleProjectsListResult(event:ResultEvent):void{
+				projectsList.dataProvider = event.result.projects.project;
+			}
+
+			protected function svcProjectsList_faultHandler(event:FaultEvent):void
+			{
+				Alert.show(event.fault.faultString, "Ошибка");
+			}
+
+		]]>
+	</fx:Script>
 	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
+	<!-- Place non-visual elements (e.g., services, value objects) here -->
+		<mx:HTTPService id="svcProjectsList"
+						 url="http://localhost:3000/projects.xml"
+						 result="handleProjectsListResult(event)"
+						 fault="svcProjectsList_faultHandler(event)" />
 	</fx:Declarations>
+	<s:VGroup gap="10" 
+			  paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10"
+			  width="100%">
+		<mx:DataGrid
+			id="projectsList"
+			width="100%" height="100%">
+			<mx:columns>
+				<mx:DataGridColumn headerText="Название" dataField="name"/>
+				<mx:DataGridColumn headerText="Дата создания" dataField="created-at"/>
+			</mx:columns>
+		</mx:DataGrid>
+		<s:Button label="Удалить"
+				  id="removeProjectButton"
+				  enabled="false"/>
+	</s:VGroup>	
 </s:Panel>
