--- a/src/components/mainWindow.mxml
+++ b/src/components/mainWindow.mxml
@@ -4,29 +4,22 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:components="components.*"
 		 width="100%" height="100%">
+	<fx:Metadata>
+		[Event(name = "logout", type = "events.LogoutEvent")]
+	</fx:Metadata>
 	<fx:Script>
 		<![CDATA[
+			import events.LogoutEvent;
 			import events.ProjectEvent;
-			[Embed(source="icons/report.png")] 
-			[Bindable]
-			public var furnitureListIcon:Class; 
 			
-			[Embed(source="icons/help.png")] 
-			[Bindable]
-			public var helpButtonIcon:Class; 
+			import mx.events.FlexEvent;
 			
-			[Embed(source="icons/cart.png")] 
-			[Bindable]
-			public var buyButtonIcon:Class; 
+			include "embedIcons.as";
 			
-			[Embed(source="icons/status_online.png")] 
-			[Bindable]
-			public var accountIcon:Class;
-			
-			[Embed(source="icons/door_out.png")] 
-			[Bindable]
-			public var logoutIcon:Class;
-			
+			protected function logout_clickHandler(event:MouseEvent):void
+			{
+				dispatchEvent(new LogoutEvent());
+			}
 
 		]]>
 	</fx:Script>
@@ -69,27 +62,29 @@
 				<mx:LinkButton label="Выход" 
 							   id="logout" 
 							   textDecoration="underline"
-							   icon="{logoutIcon}"/>
+							   icon="{logoutIcon}"
+							   click="logout_clickHandler(event)"/>
 			</s:HGroup>
 		</s:HGroup>
 	</s:controlBarContent>	
 	<s:layout>
 		<s:BasicLayout />
 	</s:layout>
-	<s:Scroller width="100%" height="100%" includeIn="designerEmployeeState,userState">
+	<s:Scroller width="100%" height="100%" 
+				includeIn="designerEmployeeState,userState">
 		<s:Group width="100%" height="100%">
 			<s:HGroup 
 				width="100%" height="100%">
-				<components:ToolWindow 
-					width="70%" height="100%"
-					projectCreate="{userProjects.displayUserProjects()}">
-				</components:ToolWindow>
+				<components:ToolWindow id="toolWindow" width="70%" height="100%" />
 				<s:VGroup 
 					minWidth="300" maxWidth="350"
 					width="30%" height="100%"
 					gap="20">
 					<components:catalog
 						width="100%"/>
+					<components:createNewProjectPanel _userProject="{toolWindow.userProject}"
+													  width="100%"
+													  projectCreate="{userProjects.displayUserProjects()}"/>
 					<components:userProjects 
 						id="userProjects"
 						title="Мои проекты" 
@@ -98,92 +93,10 @@
 					<components:clientProjects
 						width="100%"
 						includeIn="designerEmployeeState" />
-					<components:furnitureList 
-						includeIn="designerEmployeeState"
-						width="100%" />
 				</s:VGroup>	
 			</s:HGroup>
 		</s:Group>
 	</s:Scroller>
-	<s:VGroup 
-		verticalCenter="0" horizontalCenter="0"
-		width="50%" includeIn="designerEmployeeState,managerState,userState">
-		<mx:DataGrid includeIn="managerState"
-					 width="100%">
-			<mx:columns>
-				<mx:DataGridColumn headerText="Номер заказа" dataField="col1"/>
-				<mx:DataGridColumn headerText="Дата" dataField="col2"/>
-				<mx:DataGridColumn headerText="ФИО клиента" dataField="col3"/>
-			</mx:columns>
-		</mx:DataGrid>
-		<s:List includeIn="managerState" 
-				x="158" y="245" 
-				height="77" width="100%"></s:List>
-	</s:VGroup>
-	<s:VGroup
-		horizontalCenter="0"
-		verticalCenter="0"
-		width="70%" height="50%"
-		includeIn="adminState">
-		<mx:TabNavigator width="100%" height="100%"
-						 minHeight="150">
-			<s:NavigatorContent 
-				label="Дизайнеры" 
-				width="100%" height="100%">
-				<mx:DataGrid
-					height="100%" width="100%">
-					<mx:columns>
-						<mx:DataGridColumn headerText="Имя" dataField="col1"/>
-						<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
-						<mx:DataGridColumn headerText="Логин" dataField="col3"/>
-						<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
-					</mx:columns>
-				</mx:DataGrid>
-			</s:NavigatorContent>
-			<s:NavigatorContent 
-				label="Менеджеры" 
-				width="100%" height="100%">
-				<mx:DataGrid
-					height="100%" width="100%">
-					<mx:columns>
-						<mx:DataGridColumn headerText="Имя" dataField="col1"/>
-						<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
-						<mx:DataGridColumn headerText="Логин" dataField="col3"/>
-						<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
-					</mx:columns>
-				</mx:DataGrid>
-			</s:NavigatorContent>
-		</mx:TabNavigator>
-		<s:Panel title="Добавить нового пользователя"
-				 width="100%">
-			<s:VGroup
-				horizontalAlign="center"
-				width="100%">
-				<s:HGroup>
-					<mx:Form>
-						<mx:FormItem label="Имя:">
-							<s:TextInput />
-						</mx:FormItem>
-						<mx:FormItem label="Фамилия:">
-							<s:TextInput />
-						</mx:FormItem>
-						<mx:FormItem label="Номер телефона:">
-							<s:TextInput />
-						</mx:FormItem>
-					</mx:Form>
-					<mx:Form>
-						<mx:FormItem label="Логин:">
-							<s:TextInput />
-						</mx:FormItem>
-						<mx:FormItem label="Пароль:">
-							<s:TextInput />
-						</mx:FormItem>
-						<mx:FormItem label="Повторите пароль:">
-							<s:TextInput />
-						</mx:FormItem>
-					</mx:Form>
-				</s:HGroup>
-			</s:VGroup>
-		</s:Panel>
-	</s:VGroup>
+	<components:managerWindow includeIn="managerState" />
+	<components:adminWindow includeIn="adminState" />
 </s:Panel>
