--- a/src/components/userProjects.mxml
+++ b/src/components/userProjects.mxml
@@ -5,21 +5,62 @@
 		 creationComplete="displayUserProjects()">
 	<fx:Script>
 		<![CDATA[
+			import mx.controls.Alert;
+			import mx.events.ListEvent;
 			import mx.rpc.events.FaultEvent;
 			import mx.rpc.events.ResultEvent;
-			import mx.controls.Alert;
 			
+			private var currentProjectID:int;
+						
 			public function displayUserProjects():void{
 				svcProjectsList.send();
 			}
 			
 			private function handleProjectsListResult(event:ResultEvent):void{
-				projectsList.dataProvider = event.result.projects.project;
+				if (event.result.projects){
+					projectsList.dataProvider = event.result.projects.project;	
+				}
 			}
 
 			protected function svcProjectsList_faultHandler(event:FaultEvent):void
 			{
 				Alert.show(event.fault.faultString, "Ошибка");
+			}
+
+			protected function removeProjectButton_clickHandler(event:MouseEvent):void
+			{
+				svcProjectDelete.url = "http://localhost:3000/projects/" + currentProjectID + ".xml";
+				removeProjectButton.enabled = false;
+				svcProjectDelete.send({_method:"DELETE"});
+			}
+
+
+			protected function svcProjectDelete_resultHandler(event:ResultEvent):void
+			{
+				if (event.result == "error"){
+					Alert.show("Ошибка при удалении проекта", "Уведомление");
+					removeProjectButton.enabled = false;
+				}
+				else{
+					displayUserProjects();
+					Alert.show("Проект успешно удален", "Уведомление");
+					removeProjectButton.enabled = false;
+				}
+			}
+
+
+			protected function svcProjectDelete_faultHandler(event:FaultEvent):void
+			{
+				Alert.show(event.fault.faultString);
+			}
+
+
+			protected function projectsList_clickHandler(event:MouseEvent):void
+			{
+				if (projectsList.selectedItem){
+					removeProjectButton.enabled = true;
+					currentProjectID = projectsList.selectedItem.id.value;	
+				}
 			}
 
 		]]>
@@ -30,13 +71,18 @@
 						 url="http://localhost:3000/projects.xml"
 						 result="handleProjectsListResult(event)"
 						 fault="svcProjectsList_faultHandler(event)" />
+		<mx:HTTPService id="svcProjectDelete"
+						 method="POST"
+						 result="svcProjectDelete_resultHandler(event)"
+						 fault="svcProjectDelete_faultHandler(event)"/>
 	</fx:Declarations>
 	<s:VGroup gap="10" 
 			  paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10"
 			  width="100%">
 		<mx:DataGrid
 			id="projectsList"
-			width="100%" height="100%">
+			width="100%" height="100%"
+			click="projectsList_clickHandler(event)">
 			<mx:columns>
 				<mx:DataGridColumn headerText="Название" dataField="name"/>
 				<mx:DataGridColumn headerText="Дата создания" dataField="created-at"/>
@@ -44,6 +90,7 @@
 		</mx:DataGrid>
 		<s:Button label="Удалить"
 				  id="removeProjectButton"
-				  enabled="false"/>
+				  enabled="false"
+				  click="removeProjectButton_clickHandler(event)"/>
 	</s:VGroup>	
 </s:Panel>
