--- a/src/components/LoginPanel.mxml
+++ b/src/components/LoginPanel.mxml
@@ -59,10 +59,11 @@
 					   fault="loginService_faultHandler(event)">
 		</s:HTTPService>
 	</fx:Declarations>
-	<s:VGroup horizontalAlign="center" width="100%" height="100%">
+	<s:VGroup horizontalAlign="center" verticalAlign="middle"
+			  width="100%" height="100%">
 		<mx:Form id="loginForm" >
 			<mx:FormItem label="Имя пользователя:">
-				<s:TextInput id="login"/>
+				<s:TextInput id="login" />
 			</mx:FormItem>
 			<mx:FormItem label="Пароль:">
 				<s:TextInput id="password" 
@@ -82,15 +83,17 @@
 					</s:dataProvider>      
 				</s:ComboBox> 
 			</mx:FormItem>
+			<mx:FormItem>
+				<s:HGroup width="100%">
+					<s:Button 
+						id = "loginButton"  
+						label="Войти"
+						click="loginButton_clickHandler(event)"/>
+					<s:Button 
+						id = "RegButton" 
+						label = "Создать учетную запись"/>
+				</s:HGroup>
+			</mx:FormItem>
 		</mx:Form>
-		<s:HGroup>
-			<s:Button 
-				id = "loginButton"  
-				label="Войти"
-				click="loginButton_clickHandler(event)"/>
-			<s:Button 
-				id = "RegButton" 
-				label = "Зарегистрироваться"/>
-		</s:HGroup>
 	</s:VGroup>	
 </s:Panel>
