--- a/src/components/adminWindow.mxml
+++ b/src/components/adminWindow.mxml
@@ -3,39 +3,62 @@
 		  xmlns:s="library://ns.adobe.com/flex/spark" 
 		  xmlns:mx="library://ns.adobe.com/flex/mx"
 		  horizontalCenter="0" verticalCenter="0"
-		  width="70%" height="50%">
+		  width="70%" height="50%"
+		  gap="20">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<mx:TabNavigator width="100%" height="100%"
-					 minHeight="150">
-		<s:NavigatorContent 
-			label="Дизайнеры" 
-			width="100%" height="100%">
-			<mx:DataGrid
-				height="100%" width="100%">
-				<mx:columns>
-					<mx:DataGridColumn headerText="Имя" dataField="col1"/>
-					<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
-					<mx:DataGridColumn headerText="Логин" dataField="col3"/>
-					<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
-				</mx:columns>
-			</mx:DataGrid>
-		</s:NavigatorContent>
-		<s:NavigatorContent 
-			label="Менеджеры" 
-			width="100%" height="100%">
-			<mx:DataGrid
-				height="100%" width="100%">
-				<mx:columns>
-					<mx:DataGridColumn headerText="Имя" dataField="col1"/>
-					<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
-					<mx:DataGridColumn headerText="Логин" dataField="col3"/>
-					<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
-				</mx:columns>
-			</mx:DataGrid>
-		</s:NavigatorContent>
-	</mx:TabNavigator>
+	<s:Panel title="Пользователи системы"
+			 width="100%" height="100%"
+			 minHeight="300">
+		<s:HGroup width="100%" height="100%"
+				  paddingBottom="10" paddingTop="10" paddingRight="10" paddingLeft="10">
+			<mx:TabNavigator width="100%" height="100%">
+				<s:NavigatorContent 
+					label="Дизайнеры" 
+					width="100%" height="100%">
+					<mx:DataGrid
+						height="100%" width="100%"
+						paddingLeft="10" paddingRight="10" paddingBottom="10">
+						<mx:columns>
+							<mx:DataGridColumn headerText="Имя" dataField="col1"/>
+							<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
+							<mx:DataGridColumn headerText="Логин" dataField="col3"/>
+							<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
+						</mx:columns>
+					</mx:DataGrid>
+				</s:NavigatorContent>
+				<s:NavigatorContent 
+					label="Менеджеры" 
+					width="100%" height="100%">
+					<mx:DataGrid
+						height="100%" width="100%"
+						paddingLeft="10" paddingRight="10" paddingBottom="10">
+						<mx:columns>
+							<mx:DataGridColumn headerText="Имя" dataField="col1"/>
+							<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
+							<mx:DataGridColumn headerText="Логин" dataField="col3"/>
+							<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
+						</mx:columns>
+					</mx:DataGrid>
+				</s:NavigatorContent>
+				<s:NavigatorContent
+					label="Клиенты"
+					width="100%" height="100%">
+					<mx:DataGrid
+						height="100%" width="100%"
+						paddingLeft="10" paddingRight="10" paddingBottom="10">
+						<mx:columns>
+							<mx:DataGridColumn headerText="Имя" dataField="col1"/>
+							<mx:DataGridColumn headerText="Фамилия" dataField="col2"/>
+							<mx:DataGridColumn headerText="Логин" dataField="col3"/>
+							<mx:DataGridColumn headerText="Номер телефона" dataField="col3"/>
+						</mx:columns>
+					</mx:DataGrid>
+				</s:NavigatorContent>
+			</mx:TabNavigator>
+		</s:HGroup>
+	</s:Panel>
 	<s:Panel title="Добавить нового пользователя"
 			 width="100%">
 		<s:VGroup
