--- a/src/components/mainWindow.mxml
+++ b/src/components/mainWindow.mxml
@@ -3,7 +3,8 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:components="components.*"
-		 width="100%" height="100%">
+		 width="100%" height="100%"
+		 currentState="userState">
 	<fx:Metadata>
 		[Event(name = "logout", type = "events.LogoutEvent")]
 	</fx:Metadata>
@@ -13,6 +14,7 @@
 			import events.ProjectEvent;
 			
 			import mx.events.FlexEvent;
+			import mx.events.StateChangeEvent;
 			
 			include "embedIcons.as";
 			
