--- a/src/components/userProjects.mxml
+++ b/src/components/userProjects.mxml
@@ -2,10 +2,11 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 creationComplete="displayUserProjects()">
+		 creationComplete="userProjectsCreationCompleteHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.controls.Alert;
+			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			import mx.rpc.events.FaultEvent;
 			import mx.rpc.events.ResultEvent;
@@ -61,6 +62,11 @@
 					removeProjectButton.enabled = true;
 					currentProjectID = projectsList.selectedItem.id.value;	
 				}
+			}
+
+			protected function userProjectsCreationCompleteHandler(event:FlexEvent):void
+			{
+				displayUserProjects();
 			}
 
 		]]>
